--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
  <title>IFSC 1310 | Jaylon Russ</title>
   <meta name="description" content="Keyword Rich Description">
   <meta name="author" content="Your Name">
+  <link> href="assets/css/style.css" rel="stylesheet" />
 
 </head>
 <h1>Jaylon Russ</h1>
@@ -70,9 +71,13 @@
   Ottenheimer Library
   Center for Arkansas History and Culture
   Sequoyah National Research Center
-  </body><nav></nav>
+  </body><nav>
+    
+  </nav>
     <ul>
-        <il><a href="protoptype/index.html">Prototype HTML Assignment</a> </il>
+      <il><a href="protoptype/index.html">Prototype HTML Assignment</a> </il>
+      <il><a href="css-demo/">CSS Demo </a> </il>
+
 
 
 
