--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
  <title>IFSC 1310 | Jaylon Russ</title>
   <meta name="description" content="Keyword Rich Description">
   <meta name="author" content="Your Name">
-  <link> href="assets/css/style.css" rel="stylesheet" />
+  <link href="assets/css/style.css" rel="stylesheet" />
 
 </head>
 <h1>Jaylon Russ</h1>
@@ -77,6 +77,7 @@
     <ul>
       <il><a href="protoptype/index.html">Prototype HTML Assignment</a> </il>
       <il><a href="css-demo/">CSS Demo </a> </il>
+      <il><a href="css-demo/"> Flexbox Groggh </a> </il>
 
 
 
