--- a/index.html
+++ b/index.html
@@ -77,7 +77,16 @@
     <ul>
       <il><a href="protoptype/index.html">Prototype HTML Assignment</a> </il>
       <il><a href="css-demo/">CSS Demo </a> </il>
-      <il><a href="css-demo/"> Flexbox Groggh </a> </il>
+      <il><a href="css-demo/"> Flexbox Groggy </a> </il>
+      <li>Positioning Labs
+        <ul>
+          <li><a href="positioning.labs/float-1.html">float 1</a></li>
+          <li><a href="positioning.labs/float-2.html">float 2</a></li>
+        </ul> <li><a href="positioning.labs/absolute-1.html">absolute 1</a></li>
+        <li><a href="positioning.labs/absolute-2.html">Absolute 1</a></li>
+        </li>
+        
+      </li>
 
 
 
