--- a/css-demo/index.html
+++ b/css-demo/index.html
@@ -14,7 +14,8 @@
   <main>
     <header role="banner" class="primary">
       <div class="hgroup">
-        <h1><a href="index.html">Building the Modern Web</a></h1>
+        <h1>
+          <a href="index.html">Building the Modern Web</a></h1>
         <h2>HTML5, CSS, JavaScript Fundamentals</h2>
       </div>
       <nav role="navigation" class="primary">
@@ -214,7 +215,7 @@
       </div>
     </aside>
     <footer id="colophon" class="primary" role="contentinfo">
-      <h6>&copy; 2024 Your Name</h6>
+      <h6>&copy; 2024 Jaylon Russ</h6>
     </footer>
   </main>
 </body>
