--- a/positioning-labs/absolute-2.html
+++ b/positioning-labs/absolute-2.html
@@ -34,18 +34,33 @@
     }
     #navy {
       background-color: #001f3f;
+      width:370px;
+      height:125px;
+      float:left;
+      display:flex;
+      flex-wrap:nowrap;
     }
     #teal {
       background-color: #39CCCC;
+      width:370px;
+      height:125px;
+      float:right;
     }
     #blue {
       background-color: #0074D9;
+      width:370px;
+      height:125px;
+      float:left;
+      
     }
     #aqua {
       background-color: #7FDBFF;
+      width:370px;
+      height:125px;
     }
     #footer {
       background-color: #666;
+      
     }
     h1 {
       color: #000;
