--- a/index.html
+++ b/index.html
@@ -80,12 +80,13 @@
       <img src="assets/img/flexbox froggy.png" alt="flexbox froggy">
       <li>Positioning Labs
         <ul>
-          <li><a href="positioning-labs/float-1.html">float 1</a></li>
-          <li><a href="positioning-labs/float-2.html">float 2</a></li>
-        </ul> <li><a href="positioning-labs/absolute-1.html">Absolute 1</a></li>
-        <li><a href="positioning-labs/absolute-2.html">Absolute 2</a></li>
-        </li>
+          <li><a href="positioning-labs/float-1.html">float 1</a></li> <li><a href="positioning-labs/absolute-1.html">Absolute 1</a></li>
+          <li><a href="positioning-labs/float-2.html">float 2</a></li><li><a href="positioning-labs/absolute-2.html">Absolute 2</a></li>
+        </ul> 
+        <li><a href="flexbox-froggy/index.html">flexbox-froggy</li>
+          <li><a href="project-1/index.html">Project 1</li>
         
+    
       </li>
 
 
